# fullstack-web-dev

./: compose.yml
.devcontainer/node-container/: Dockerfile  devcontainer.json
.devcontainer/python-container/: devcontainer.json
.devcontainer/terraform-container/: devcontainer.json
backend/: pyproject.toml
backend/api/hello_db/migrations/: 0001_initial.py
backend/app/: urls.py
backend/app/settings/: base.py  development.py
frontend/: next.config.mjs  package.json
frontend/app/hello/: page.tsx
frontend/app/hello_backend/: page.tsx
frontend/app/hello_backend_db/: page.tsx
frontend/app/hello_frontend/: page.tsx
frontend/app/hello_frontend_state_change/: page.tsx
frontend/app/inventory/products/sample/: dummy_products.json
frontend/pages/api/: hello.ts
infra/postgres/init/: 01_init.sql
